--- a/JavaScript/06. DOM/index.html
+++ b/JavaScript/06. DOM/index.html
@@ -11,6 +11,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, perferendis! Voluptatibus sint inventore delectus officiis deserunt, corrupti, suscipit mollitia blanditiis in architecto debitis iste rem. Consequuntur dicta quia quasi soluta?</p>
     <p id="remove">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ex, explicabo, dolor, minima quidem ea modi numquam dicta maiores perspiciatis adipisci voluptate aut dolorum vitae magnam? Molestiae totam non id!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eum ullam vel iste mollitia assumenda molestiae, eaque cupiditate repellat fugiat qui architecto aliquid quia a maxime pariatur ipsam provident quam.</p>
+    <h1 id="p_remove">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio magni, soluta saepe numquam, magnam veniam fugiat dolorem, dolorum neque ea optio quidem! Dolore hic eum eius minima, quae dolor ex.</h1>
+    <button onclick="removebtn()">Remove</button>
 
 
 
